fixed text spacing in typewriter effect

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  column-gap: 0.25em; /* Replaces space lost due to flex display */
 }
 @media (min-width: 600px){
   .hero h1{ min-height: 1.15em; } /* On larger screens, 1 line is enough */
